fix: set default font weight to 400 in dark mode [ACC-290]

--- a/src/style/foundation/base.less
+++ b/src/style/foundation/base.less
@@ -48,10 +48,14 @@ body {
   color: var(--main-color);
   font-family: @font-family-base;
   font-size: @font-size-sm;
-  font-weight: 300;
+  font-weight: @font-weight-light;
   overflow-x: hidden;
   overflow-y: hidden !important;
   text-rendering: optimizeLegibility;
+
+  &.theme-dark {
+    font-weight: @font-weight-regular;
+  }
 }
 
 // Set default icon size
